Transfer the notification icon through XPC as NSData for OSX 10.09

This is because NSImage only started conforming to NSecureCoding in 10.10

BUG=696759

Review-Url: https://codereview.chromium.org/2728173003
Cr-Commit-Position: refs/heads/master@{#454916}

Former-commit-id: 52f904d3bf07e423a6bb907ff6f344935532affa